<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_principal">MENÚ PRINCIPAL</string>
    <string name="pedidos">Pedidos</string>
    <string name="clientes">Clientes</string>
    <string name="productos">Productos</string>
    <string name="cliente">Cliente: </string>
    <string name="ingresarcliente">Ingrese un cliente</string>
    <string name="ingresarproducto">Buscar producto</string>
    <string name="agregarlinea">Nueva línea</string>
    <string name="filtroCategoria">Categoría: </string>
    <string name="cero">0</string>
    <string name="X">X</string>
    <string name="mas">+</string>
    <string name="nohaylineas">Aún no se agregaron productos</string>
    <string name="Guardar">Guardar</string>
    <string name="nuevopedido">Nuevo pedido</string>
    <string name="listarpedidos">Listar pedidos</string>
    <string name="title_activity_menu_pedidos">MENÚ PRINCIPAL</string>
    <string name="title_activity_menu_productos">MENÚ PRODUCTOS</string>
    <string name="title_activity_menu_clientes">MENÚ CLIENTES</string>
    <string name="title_activity_pedido_nuevo">NUEVO PEDIDO</string>
    <string name="title_activity_listar_pedidos">LISTA DE PEDIDOS</string>
    <string name="title_crear_cliente">Cliente nuevo</string>
    <string name="title_crear_producto">Producto nuevo</string>
</resources>
