<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gastongimenez.www.gestion.CrearPedido">

    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">
                    <TextView android:text="@string/cliente"
                        android:layout_width="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content" />
                    <AutoCompleteTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/AutoCompleteCliente"
                        android:hint="@string/ingresarcliente"
                        />
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"/>
            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="5dp"/>

            <TextView android:text="@string/agregarlinea"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:layout_width="0dp"
                    android:layout_weight=".80"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:id="@+id/AutoCompleteProducto"
                    android:hint="@string/ingresarproducto"
                    />
                <TextView android:text="@string/X"
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_height="wrap_content" />
                <EditText android:id="@+id/cantidadProductos"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/cero"
                    android:layout_width="0dp"
                    android:layout_weight=".20"
                    android:gravity="center"
                    />
                <Button android:id="@+id/BtnAgregarLineaPedido"
                    android:onClick="agregarLineaPedido"
                    android:text="@string/mas"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingTop="10dp">

                <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/lineaspedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <Button android:id="@+id/TerminarPedido"
                    android:onClick="guardarPedido"
                    android:text="@string/Guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
