<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#131912"
    tools:context="com.gastongimenez.www.gestion.MenuProductos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <EditText
            android:textColor="@color/verdeoscuro"
            android:textSize="25dp"
            android:layout_width="0dp"
            android:layout_weight=".90"
            android:layout_height="match_parent"
            android:background="@drawable/corners"
            android:id="@+id/filtroProducto"
            android:hint="@string/ingresarproducto"
            android:drawableLeft="@drawable/lupanegra"
            android:drawablePadding="13dp"
            />
        <Button android:id="@+id/BtnAgregarLineaProducto"
            android:onClick="agregarProducto"
            android:text="@string/mas"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="#D4D4D4"
            android:background="#131912"
            android:textSize="40dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="23dp"
            android:paddingRight="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Blancoynegro"
                android:layout_marginRight="20dp"
                android:textSize="25dp"
                android:text="@string/filtroCategoria"/>
            <Spinner
                android:id="@+id/listaCategoriasProductos"
                android:background="@drawable/corners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginRight="60dp"/>
        </LinearLayout>
        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/listaProductos"
            android:background="@drawable/esquinassuaves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>