<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#131912"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MenuPrincipal">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical">
        <ImageView android:id="@+id/imagenMenuPedidos"
            android:src="@drawable/cart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:layout_marginRight="35dp"/>
        <Button android:id="@+id/BtnMenuPedidos"
            android:onClick="menuSeleccionado"
            android:text="@string/pedidos"
            android:textColor="#D4D4D4"
            android:gravity="left|center_vertical"
            android:shadowColor="#5D5E5E"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textSize="25dp"
            android:background="@drawable/estiloboton"
            android:drawablePadding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical">
        <ImageView android:id="@+id/imagenMesnuProductos"
            android:src="@drawable/box"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:layout_marginRight="35dp"/>
        <Button android:id="@+id/BtnMenuProductos"
            android:onClick="menuSeleccionado"
            android:background="@drawable/estiloboton"
            android:text="@string/productos"
            android:textColor="#D4D4D4"
            android:gravity="left|center_vertical"
            android:shadowColor="#5D5E5E"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textSize="25dp"
            android:drawablePadding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical">
        <ImageView android:id="@+id/imagenMenuClientes"
            android:src="@drawable/contacts"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:layout_marginRight="35dp"/>
        <Button android:id="@+id/BtnMenuClientes"
            android:onClick="menuSeleccionado"
            android:background="@drawable/estiloboton"
            android:text="@string/clientes"
            android:textColor="#D4D4D4"
            android:gravity="left|center_vertical"
            android:shadowColor="#5D5E5E"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textSize="25dp"
            android:drawablePadding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
</LinearLayout>
